# atarus-cloud

./: .gitignore  README.md  RELEASE_NOTES_v1.0.0.md  build_v02.sh  pyproject.toml  requirements.txt
src/atarus_cloud/: cli.py  models.py  runner.py
src/atarus_cloud/analysis/: attack_paths.py  compliance.py  exec_summary.py
src/atarus_cloud/providers/aws/: auth.py  cloudtrail.py  ec2.py  iam.py  kms.py  lambda_fn.py  rds.py  s3.py  secrets.py  vpc.py
src/atarus_cloud/providers/azure/: auth.py  compute.py  cosmosdb.py  identity.py  keyvault.py  network.py  sql.py  storage.py
src/atarus_cloud/reports/: html.py  json_export.py  pdf.py  remediation.py
templates/: cloud_report.html
